<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jav小助手</string>
    <string name="title_section1">首页</string>
    <string name="title_section2">搜索</string>
    <string name="title_section3">个人中心</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">访问网站</string>
    <string name="action_settings">Settings</string>
    <string name="most_wanted_feed_url">http://ec2.kekebox.kewei.hu/javLibraryRESTful/javLibrary/most_wanted</string>
    <string name="best_rated_feed_url">http://ec2.kekebox.kewei.hu/javLibraryRESTful/javLibrary/best_rated</string>
    <string name="new_releases_feed_url">http://ec2.kekebox.kewei.hu/javLibraryRESTful/javLibrary/new_releases</string>
    <string name="new_entries_feed_url">http://ec2.kekebox.kewei.hu/javLibraryRESTful/javLibrary/new_entries</string>
    <string name="all_videos_feed_url">http://ec2.kekebox.kewei.hu/javLibraryRESTful/javLibrary/videos</string>
    <string name="error_invalid_password">密码无效</string>
    <string name="error_field_required">此项是必填项</string>
    <string name="error_invalid_email">电子邮箱地址无效</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="prompt_email">电子邮箱地址</string>
    <string name="prompt_password"> 密码</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="action_sign_in">登陆或注册</string>
    <string name="authentication_url">http://ec2.kekebox.kewei.hu/javLibraryRESTful/javLibrary/members</string>
    <string name="action_signInUp">注册/登陆</string>
    <string name="preference_url">http://ec2.kekebox.kewei.hu/javLibraryRESTful/javLibrary/membersPreference/</string>
    <string name="please_login">需要登陆才能使用该功能，请返回主菜单进行登陆/注册。</string>
    <string name="saved_email" >SAVED_EMAIL</string>
    <string name="saved_pw" >SAVED_PW_MD5</string>
    <string name="search_title">搜片</string>
    <string name="search_results">搜索结果</string>
    <string name="declaration_title">注意</string>
    <string name="declaration_text">本物品内容可能令人反感；不可将本物品内容派发，传阅，出售，出租，交给或出借予年龄未满 18 岁的人士出示，播放或播映。</string>
    <string name="warning_title">警告 / WARNING</string>
    <string name="warning_text">本应用使用者需要至少已经年满十八岁（或是在使用者所在地已经达到法定成年）。浏览、阅读或是下载成人讯息并不违反使用者所在社群、程式、地区或是国家。使用者将为自己任何的不法行为负责。</string>
    <string name="accept">接受</string>
    <string name="decline">拒绝</string>
    <string name="searching">搜索中...</string>
    <string name="jav_title">JavLibrary 是什么？</string>
    <string name="jav_text">JavLibrary 是一个线上日本成人影片图书馆。你可以搜寻并查询日本成人影片的相关资讯。如果你对日本成人影片不熟，这里会是个危险的地方，因为你将很快地沉迷在其中。如果你已经是个日本成人影片迷，则你大概已经有一些困扰，这也是我们存在的目的。</string>
    <string name="javapp_title">Jav小助手是什么？</string>
    <string name="javapp_text">Jav小助手是专门为手机端设计的非官方客户端，非javlibrary.com开发。应用的内容通过爬虫抓取自javlibrary.com，本应用不对内容负任何责任，也不对应用对使用者产生的结果负任何责任，如果您不接受次条款，请立即停止使用本应用，并将其彻底卸载。如果您发现本应用侵害了您的权益，请立即联系我们。</string>
    <string name="title_section4">关于</string>
    <string name="double_click_exit">再按一次来退出应用</string>
    <string name="videos_of_actor"> 参演的作品</string>

</resources>
