<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="@string/search_title"
        yourapp:actionViewClass="android.support.v7.widget.SearchView"
        yourapp:showAsAction="always" />
    <item android:id="@+id/goto_web" android:title="@string/action_example"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_signInUp" android:title="@string/action_signInUp"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
