<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/warning_title"
                    android:textStyle="bold"
                    android:textColor="@color/fuchsia"
                    android:textSize="18dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/warning_text"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:src="@drawable/r_level"/>
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:src="@drawable/fbi_warning"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/declaration_title"
                    android:textColor="@color/fuchsia"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/declaration_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/javapp_title"
                    android:textColor="@color/fuchsia"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/javapp_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jav_title"
                    android:textColor="@color/fuchsia"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginBottom="10dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jav_text"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>