<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:id="@+id/login_fragment">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="18dp"
        android:visibility="gone" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_text_progress"
        android:visibility="gone"
        android:textSize="17sp"
        android:textColor="@color/silver"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent">

        <LinearLayout android:id="@+id/email_login_form1" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:background="@drawable/black_shadow"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="25dp">

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="欢迎！"
                android:textStyle="bold"
                android:textSize="25dp"
                android:textColor="@color/fuchsia"
                android:id="@+id/welcome_text" />

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|left">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/fuchsia"
                    android:text="记住密码"/>
                <com.gc.materialdesign.views.CheckBox
                    android:id="@+id/saveLoginCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#1E88E5"
                    materialdesign:check="true" />
                </LinearLayout>


            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="12dp" android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="#fff"
                android:background="@color/fuchsia" />

        </LinearLayout>
    </ScrollView>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>



